; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/vga/extr_vga_switcheroo.c_vga_switcheroo_pwr_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/vga/extr_vga_switcheroo.c_vga_switcheroo_pwr_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vga_switcheroo_client = type { i32, %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32 }

@VGA_SWITCHEROO_ON = common dso_local global i32 0, align 4
@VGA_SWITCHEROO_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vga_switcheroo_client*)* @vga_switcheroo_pwr_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vga_switcheroo_pwr_state(%struct.vga_switcheroo_client* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vga_switcheroo_client*, align 8
  store %struct.vga_switcheroo_client* %0, %struct.vga_switcheroo_client** %3, align 8
  %4 = load %struct.vga_switcheroo_client*, %struct.vga_switcheroo_client** %3, align 8
  %5 = getelementptr inbounds %struct.vga_switcheroo_client, %struct.vga_switcheroo_client* %4, i32 0, i32 2
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %26

8:                                                ; preds = %1
  %9 = load %struct.vga_switcheroo_client*, %struct.vga_switcheroo_client** %3, align 8
  %10 = getelementptr inbounds %struct.vga_switcheroo_client, %struct.vga_switcheroo_client* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = call i64 @pm_runtime_enabled(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %8
  %16 = load %struct.vga_switcheroo_client*, %struct.vga_switcheroo_client** %3, align 8
  %17 = getelementptr inbounds %struct.vga_switcheroo_client, %struct.vga_switcheroo_client* %16, i32 0, i32 1
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = call i64 @pm_runtime_active(i32* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %15
  %23 = load i32, i32* @VGA_SWITCHEROO_ON, align 4
  store i32 %23, i32* %2, align 4
  br label %30

24:                                               ; preds = %15, %8
  %25 = load i32, i32* @VGA_SWITCHEROO_OFF, align 4
  store i32 %25, i32* %2, align 4
  br label %30

26:                                               ; preds = %1
  %27 = load %struct.vga_switcheroo_client*, %struct.vga_switcheroo_client** %3, align 8
  %28 = getelementptr inbounds %struct.vga_switcheroo_client, %struct.vga_switcheroo_client* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %26, %24, %22
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i64 @pm_runtime_enabled(i32*) #1

declare dso_local i64 @pm_runtime_active(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
